# sample.cpp_webapp

./: .gitmodules  CMakeLists.txt  LICENSE  README.md
client/app/: index.html
client/source/: main.cpp  plugin.cpp
server/resource/: config.json
server/source/: main.cpp
server/source/controller/: master.cpp
view/: error.csp  header.csp  main.csp
